--- a/Styles/pags.css
+++ b/Styles/pags.css
@@ -1,3 +1,12 @@
 body{
     background-color: linear-gradient ( orange, black 55%);
 }
+header{
+    background-color: white;
+    color: black;
+}
+img{
+    border-radius: 5px;
+    position: relative;
+    justify-content: center;
+}
