--- a/Styles/pags.css
+++ b/Styles/pags.css
@@ -1,11 +1,11 @@
-body{
+.body{
     background: linear-gradient(rgba(255,165,0), rgba( 0,0,0 ) 55%);
 }
-header{
+.header{
     background-color: white;
     color: black;
 }
-img{
+.img{
     border-radius: 15px;
     position: relative;
     justify-content: center;
