--- a/Styles/pags.css
+++ b/Styles/pags.css
@@ -1,3 +1,7 @@
+*{
+    margin: 0;
+    padding: 0;
+}
 body{
     background: linear-gradient(rgba(255,165,0), rgba( 0,0,0 ) 55%);
 }
@@ -9,4 +13,8 @@ img{
     border-radius: 15px;
     position: relative;
     justify-content: center;
+}
+a{
+    list-style: none;
+    color: black;
 }
