--- a/Styles/pags.css
+++ b/Styles/pags.css
@@ -3,14 +3,14 @@
     padding: 0;
 }
 body{
-    background: linear-gradient(rgba(255,165,0), rgba( 0,0,0 ) 55%);
+    background: linear-gradient(rgba(255,165,0), rgba( 0,0,0 ));
 }
 header{
     background-color: white;
     color: black;
 }
 img{
-    border-radius: 15px;
+    border-radius: 5%;
     position: relative;
     justify-content: center;
 }
