--- a/Styles/pags.css
+++ b/Styles/pags.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 body{
-    background: linear-gradient(rgba(255,165,0) 100%, rgba( 0,0,0 ) 0.5%);
+    background: linear-gradient(rgba(255,165,0), rgba( 0,0,0 ) 100%);
     filter: blur(5px);
 }
 header{
